--- a/embedder.html
+++ b/embedder.html
@@ -7,7 +7,7 @@
     <button>embed about:blank</button>
     <script type="text/javascript">
         var urlobj = new window.URL(window.location.href);
-        let url = prompt("url?")
+        let url = prompt(https://sites.google.com/g.dentonisd.org/cargoship25/home-use-dropdown-menu-on-this-for-everything-to-show)
         if (url) {
             var win;
             document.querySelector('button'). onclick = function() {
